--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,13 @@ buck-out/
 *.jsbundle
 src/aws-exports.js
 
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
