--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
 	"auth": {
-		"cognitoe6ac1689": {
+		"cognitodevtmh": {
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation"
 		}
