--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify-react-native": "^2.1.7",
     "aws-sdk": "^2.413.0",
     "expo": "^32.0.0",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-scripts": "^2.0.1",
