Add Screens that map to website, logo on header and sidebar

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "The Meeting House",
+    "projectName": "Jesus Collective",
     "version": "2.0",
     "frontend": "javascript",
     "javascript": {
