--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-scripts": "^2.0.1",
+    "react-native-webview": "^5.6.2",
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
