--- a/package.json
+++ b/package.json
@@ -8,18 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "aws-amplify": "^1.1.19",
-    "aws-amplify-react-native": "^2.1.7",
-    "aws-sdk": "^2.413.0",
+    "apollo-client": "^2.6.0",
+    "aws-amplify": "^1.1.28",
+    "aws-amplify-react-native": "^2.1.12",
+    "aws-appsync": "^1.8.0",
+    "aws-appsync-react": "^1.2.8",
+    "aws-sdk": "^2.463.0",
     "expo": "^32.0.0",
+    "graphql-tag": "^2.10.1",
+    "import": "0.0.6",
     "native-base": "^2.12.1",
     "react": "16.5.0",
+    "react-apollo": "^2.5.6",
+    "react-instagram-embed": "^1.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-deck-swiper": "^1.6.7",
+    "react-native-elements": "^1.1.0",
+    "react-native-instagram-embed": "0.0.6",
+    "react-native-maps": "^0.24.2",
     "react-native-scripts": "^2.0.1",
-    "react-navigation": "^3.3.2"
+    "react-native-view-overflow": "0.0.4",
+    "react-native-youtube": "^1.1.0",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.1.1"
   },
   "private": true
 }
