--- a/app.json
+++ b/app.json
@@ -1,19 +1,19 @@
 {
   "expo": {
-    "name": "Jesus Collective",
-    "slug": "JesusCollective",
+    "name": "The Meeting House",
+    "slug": "TheMeetingHouse",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
       "ios",
       "android"
     ],
-    "version": "1.0.0",
+    "version": "6.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "facebookScheme":"fb579712102531269",
     "facebookAppId":"579712102531269",
-    "facebookDisplayName":"Jesus Collective",
+    "facebookDisplayName":"The Meeting House",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
