--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "@types/expo": "^32.0.13",
+    "@types/react-native": "^0.57.61",
+    "babel-preset-expo": "^5.1.1",
+    "typescript": "^3.5.1"
   },
   "private": true
 }
