Login and Signup Screens

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -22,5 +22,20 @@
 				}
 			]
 		}
+	},
+	"api": {
+		"jcmobile": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"securityType": "AMAZON_COGNITO_USER_POOLS"
+			}
+		}
+	},
+	"analytics": {
+		"jcmobile": {
+			"service": "Pinpoint",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
