Update to recent version and

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "Jesus Collective",
+    "projectName": "The Meeting House",
     "version": "2.0",
     "frontend": "javascript",
     "javascript": {
