--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -2,14 +2,14 @@ projects:
   meetinghouse:
     schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/**/*.js
+      - src/graphql/**/*.ts
     excludes:
       - ./amplify/**
     extensions:
       amplify:
         graphQLApiId: freaaighnbcjhksw63ci4fgjxu
-        codeGenTarget: javascript
-        generatedFileName: ''
+        codeGenTarget: typescript
+        generatedFileName: src/API.ts
         docsFilePath: src/graphql
         region: us-east-1
         maxDepth: 10
