--- a/package.json
+++ b/package.json
@@ -8,34 +8,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@unimodules/core": "~4.0.0",
+    "@unimodules/react-native-adapter": "~4.0.0",
     "apollo-client": "^2.6.0",
-    "aws-amplify": "^1.1.28",
+    "aws-amplify": "1.1.28",
     "aws-amplify-react-native": "^2.1.12",
     "aws-appsync": "^1.8.0",
     "aws-appsync-react": "^1.2.8",
-    "aws-sdk": "^2.463.0",
-    "expo": "^32.0.0",
+    "aws-sdk": "^2.482.0",
     "graphql-tag": "^2.10.1",
     "import": "0.0.6",
     "native-base": "^2.12.1",
-    "react": "16.5.0",
+    "react": "16.8.3",
     "react-apollo": "^2.5.6",
     "react-instagram-embed": "^1.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-elements": "^1.1.0",
+    "react-native-fs": "^2.13.3",
     "react-native-instagram-embed": "0.0.6",
-    "react-native-maps": "^0.24.2",
+    "react-native-maps": "~0.25.0",
     "react-native-scripts": "^2.0.1",
+    "react-native-vector-icons": "^4.6.0",
     "react-native-view-overflow": "0.0.4",
     "react-native-youtube": "^1.1.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "expo": "^35.0.0",
+    "expo-font": "~7.0.0",
+    "react-native-gesture-handler": "~1.3.0"
   },
   "devDependencies": {
     "@types/expo": "^32.0.13",
-    "@types/react-native": "^0.57.61",
-    "babel-preset-expo": "^5.1.1",
-    "typescript": "^3.5.1"
+    "@types/react-native": "^0.57.65",
+    "babel-preset-expo": "^7.0.0",
+    "expo": "^32.0.6",
+    "expo-cli": "^3.9.1",
+    "typescript": "^3.4.5"
   },
   "private": true
 }
