--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "aws-appsync": "^1.8.0",
     "aws-appsync-react": "^1.2.8",
     "aws-sdk": "^2.482.0",
+    "expo": "^35.0.0",
+    "expo-font": "~7.0.0",
     "graphql-tag": "^2.10.1",
     "import": "0.0.6",
     "native-base": "^2.12.1",
@@ -25,17 +27,16 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-elements": "^1.1.0",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fs": "^2.13.3",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-instagram-embed": "0.0.6",
     "react-native-maps": "~0.25.0",
     "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-native-view-overflow": "0.0.4",
     "react-native-youtube": "^1.1.0",
-    "react-navigation": "^3.11.0",
-    "expo": "^35.0.0",
-    "expo-font": "~7.0.0",
-    "react-native-gesture-handler": "~1.3.0"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@types/expo": "^32.0.13",
