--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -13,3 +13,6 @@ projects:
         docsFilePath: src/graphql
         region: us-east-1
         maxDepth: 10
+extensions:
+  amplify:
+    version: 3
