--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -6,7 +6,7 @@
         "framework": "react-native",
         "config": {
             "SourceDir": "/src",
-            "DistributionDir": "/",
+            "DistributionDir": "/web-build",
             "BuildCommand": "npm run-script build",
             "StartCommand": "npm run-script start"
         }
