--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -37,5 +37,11 @@
 			"service": "Pinpoint",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"hosting": {
+		"S3AndCloudFront": {
+			"service": "S3AndCloudFront",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
