--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "prebuild": "amplify push",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
+    "prebuild": "npx amplify push",
+    "build": "npx expo build:web",
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "eject": "npx expo eject"
   },
   "dependencies": {
-    "@types/expo": "^32.0.13",
-    "@types/googlemaps": "^3.37.4",
-    "aws-amplify": "^1.1.36",
-    "aws-amplify-react-native": "^2.1.16",
-    "aws-sdk": "^2.512.0",
-    "babel-preset-expo": "^5.2.0",
-    "expo": "^34.0.4",
-    "native-base": "^2.13.5",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "@types/googlemaps": "^3.38.1",
+    "aws-amplify": "^1.2.4",
+    "aws-amplify-react-native": "^2.2.3",
+    "aws-sdk": "^2.585.0",
+    "babel-preset-expo": "^7.0.0",
+    "expo": "^35.0.0",
+    "native-base": "^2.13.8",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
-    "react-native": "^0.59.10",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-maps": "^0.24.2",
-    "react-native-reanimated": "^1.2.0",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-maps": "~0.25.0",
+    "react-native-reanimated": "~1.2.0",
     "react-native-scripts": "^2.0.1",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
-    "react-native-webview": "^5.12.1",
-    "react-navigation": "^3.11.0",
+    "react-native-webview": "7.0.5",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2",
     "resize-observer-polyfill": "^1.5.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.7.3"
   },
   "private": true,
   "devDependencies": {
-    "@expo/webpack-config": "^0.7.3",
-    "@types/react": "^16.9.2",
-    "@types/react-native": "^0.60.6"
+    "expo-cli": "^3.10.2",
+    "@aws-amplify/cli": "^3.17.0",
+    "@expo/webpack-config": "^0.10.6",
+    "@types/react": "^16.9.15",
+    "@types/react-native": "^0.60.24"
   }
 }
