--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-maps": "~0.25.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-scripts": "^2.0.1",
+    "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
     "react-native-webview": "7.0.5",
