--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
     "aws-amplify": "^1.2.4",
     "aws-amplify-react-native": "^2.2.3",
     "aws-sdk": "^2.585.0",
-    "babel-preset-expo": "^7.0.0",
-    "expo": "^35.0.0",
+    "babel-preset-expo": "^8.0.0",
+    "expo": "^36.0.0",
     "native-base": "^2.13.8",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-google-maps": "^9.4.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-maps": "~0.25.0",
-    "react-native-reanimated": "~1.2.0",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
+    "react-native-reanimated": "~1.4.0",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
-    "react-native-webview": "7.0.5",
+    "react-native-webview": "7.4.3",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3",
+    "react-navigation-stack": "^2.0.15",
     "react-navigation-tabs": "^2.6.2",
     "resize-observer-polyfill": "^1.5.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.2"
   },
   "private": true,
   "devDependencies": {
-    "expo-cli": "^3.10.2",
     "@aws-amplify/cli": "^3.17.0",
-    "@expo/webpack-config": "^0.10.6",
-    "@types/react": "^16.9.15",
-    "@types/react-native": "^0.60.24"
+    "@expo/webpack-config": "^0.10.11",
+    "@types/react": "^16.9.0",
+    "@types/react-native": "^0.60.15",
+    "expo-cli": "^3.10.2",
+    "webpack-merge": "^4.2.2"
   }
 }
