--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-safe-area-view": "^1.0.0",
+    "react-native-screens": "^2.0.0-alpha.34",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
     "react-native-webview": "7.4.3",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "^4.1.0",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^2.0.15",
+    "react-navigation-stack": "^2.1.0",
     "react-navigation-tabs": "^2.6.2",
     "resize-observer-polyfill": "^1.5.1",
     "typescript": "^3.7.2"
