--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@react-navigation/web": "^1.0.0-alpha.9",
     "@types/googlemaps": "^3.38.1",
     "Dante2": "^0.5.0-rc24",
     "aws-amplify": "^1.2.4",
@@ -36,10 +37,10 @@
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
     "react-native-webview": "7.4.3",
-    "react-navigation": "^4.1.0",
+    "react-navigation": "^4.1.1",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.1.0",
-    "react-navigation-tabs": "^2.6.2",
+    "react-navigation-tabs": "^2.7.0",
     "resize-observer-polyfill": "^1.5.1",
     "typescript": "^3.7.2"
   },
