--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "0.26.1",
+    "react-native-progress-wheel": "^1.0.5",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-safe-area-view": "^1.0.0",
