--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "16.9.0",
     "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-calendars": "^1.263.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "0.26.1",
