--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "eject": "npx expo eject"
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.9.4",
+    "@material-ui/pickers": "^3.2.10",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@types/googlemaps": "^3.38.1",
     "Dante2": "^0.5.0-rc24",
@@ -20,8 +24,10 @@
     "babel-preset-expo": "^8.0.0",
     "emotion-theming": "^10.0.27",
     "expo": "^36.0.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
+    "react-datepicker": "^2.13.0",
     "react-dom": "16.9.0",
     "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
