--- a/package.json
+++ b/package.json
@@ -9,52 +9,52 @@
     "eject": "npx expo eject"
   },
   "dependencies": {
-    "@date-io/moment": "^1.3.13",
-    "@emotion/core": "^10.0.27",
+    "@date-io/moment": "^2.4.0",
+    "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.9.4",
+    "@material-ui/core": "^4.9.5",
     "@material-ui/pickers": "^3.2.10",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "@types/googlemaps": "^3.38.1",
-    "Dante2": "^0.5.0-rc24",
+    "@types/googlemaps": "^3.39.3",
+    "Dante2": "^0.5.0-rc25",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react-native": "^3.2.2",
-    "aws-sdk": "^2.585.0",
+    "aws-sdk": "^2.640.0",
     "babel-preset-expo": "^8.0.0",
     "emotion-theming": "^10.0.27",
     "expo": "^36.0.0",
     "moment": "^2.24.0",
-    "native-base": "^2.13.8",
+    "native-base": "2.13.8",
     "react": "16.9.0",
-    "react-datepicker": "^2.13.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "16.9.0",
     "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-calendars": "^1.263.0",
+    "react-native-calendars": "^1.264.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-maps": "0.26.1",
     "react-native-progress-wheel": "^1.0.5",
     "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "^0.6.4",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "^2.0.0-alpha.34",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
     "react-native-webview": "7.4.3",
-    "react-navigation": "^4.1.1",
-    "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^2.1.0",
-    "react-navigation-tabs": "^2.7.0",
+    "react-navigation": "^4.3.1",
+    "react-navigation-drawer": "^2.4.4",
+    "react-navigation-stack": "^2.3.1",
+    "react-navigation-tabs": "^2.8.4",
     "resize-observer-polyfill": "^1.5.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.8.3"
   },
   "private": true,
   "devDependencies": {
-    "@aws-amplify/cli": "^4.16.0",
+    "@aws-amplify/cli": "^4.16.1",
     "@expo/webpack-config": "^0.10.11",
     "@types/react": "^16.9.0",
     "@types/react-native": "^0.60.15",
