--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "ios": "npx expo start --ios",
     "eject": "npx expo eject",
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1"
-
   },
   "dependencies": {
+    "@aws-amplify/datastore": "^1.1.0",
     "@date-io/moment": "^2.4.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
