initial zoom integration

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@types/googlemaps": "^3.39.3",
+    "@zoomus/websdk": "^1.7.2",
     "Dante2": "^0.5.0-rc25",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react-native": "^3.2.2",
@@ -27,6 +28,7 @@
     "babel-preset-expo": "^8.0.0",
     "emotion-theming": "^10.0.27",
     "expo": "^36.0.0",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "native-base": "2.13.8",
     "react": "16.9.0",
