--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@aws-amplify/datastore": "^1.1.0",
-    "@date-io/moment": "^2.4.0",
+    "@date-io/moment": "^1.3.13",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.8",
     "@material-ui/pickers": "^3.2.10",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/netinfo": "^5.6.2",
@@ -29,10 +29,10 @@
     "emotion-theming": "^10.0.27",
     "expo": "^36.0.0",
     "jquery": "^3.4.1",
-    "moment": "^2.24.0",
+    "moment": "^2.15.2",
     "native-base": "2.13.8",
     "react": "16.9.0",
-    "react-datepicker": "^2.14.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "16.9.0",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
@@ -55,6 +55,7 @@
     "react-navigation-drawer": "^2.4.4",
     "react-navigation-stack": "^2.3.1",
     "react-navigation-tabs": "^2.8.4",
+    "react-places-autocomplete": "^7.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "typescript": "^3.8.3"
   },
