--- a/package.json
+++ b/package.json
@@ -10,47 +10,47 @@
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1"
   },
   "dependencies": {
-    "@aws-amplify/datastore": "^1.1.0",
+    "@aws-amplify/datastore": "^2.0.5",
     "@date-io/moment": "^1.3.13",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.8",
     "@material-ui/pickers": "^3.2.10",
-    "@react-native-community/masked-view": "^0.1.7",
-    "@react-native-community/netinfo": "^5.6.2",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "5.5.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@types/googlemaps": "^3.39.3",
     "@zoomus/websdk": "^1.7.2",
     "Dante2": "^0.5.0-rc25",
-    "aws-amplify": "^2.2.6",
-    "aws-amplify-react-native": "^3.2.2",
+    "aws-amplify": "^3.0.5",
+    "aws-amplify-react-native": "^4.0.2",
     "aws-sdk": "^2.640.0",
-    "babel-preset-expo": "^8.0.0",
+    "babel-preset-expo": "^8.1.0",
     "emotion-theming": "^10.0.27",
-    "expo": "^36.0.0",
+    "expo": "^37.0.0",
     "jquery": "^3.4.1",
     "moment": "^2.15.2",
     "native-base": "2.13.8",
-    "react": "16.9.0",
+    "react": "^16.13.1",
     "react-datepicker": "^2.14.1",
-    "react-dom": "16.9.0",
+    "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-calendars": "^1.264.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^1.5.6",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-screens": "~2.2.0",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
-    "react-native-webview": "7.4.3",
+    "react-native-webview": "8.1.1",
     "react-navigation": "^4.3.1",
     "react-navigation-drawer": "^2.4.4",
     "react-navigation-stack": "^2.3.1",
@@ -62,10 +62,11 @@
   "private": true,
   "devDependencies": {
     "@aws-amplify/cli": "^4.16.1",
-    "@expo/webpack-config": "^0.10.11",
-    "@types/react": "^16.9.0",
+    "@expo/webpack-config": "^0.11.18",
+    "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.15",
-    "expo-cli": "^3.10.2",
+    "expo-cli": "^3.17.16",
+    "readline": "^1.3.0",
     "webpack-merge": "^4.2.2"
   }
 }
