--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@material-ui/core": "^4.9.8",
     "@material-ui/pickers": "^3.2.10",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "5.5.0",
+    "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@types/googlemaps": "^3.39.3",
     "@zoomus/websdk": "^1.7.2",
@@ -61,12 +61,14 @@
   },
   "private": true,
   "devDependencies": {
-    "@aws-amplify/cli": "^4.16.1",
+    "@aws-amplify/cli": "^4.18.0",
     "@expo/webpack-config": "^0.11.18",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.15",
     "expo-cli": "^3.17.16",
     "readline": "^1.3.0",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   }
 }
