--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "@expo/webpack-config": "^0.11.18",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.15",
+    "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.17.16",
+    "module-to-cdn": "^3.1.5",
     "readline": "^1.3.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
