--- a/package.json
+++ b/package.json
@@ -8,7 +8,22 @@
     "android": "npx expo start --android",
     "ios": "npx expo start --ios",
     "eject": "npx expo eject",
+    "test": "jest",
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
   },
   "dependencies": {
     "@aws-amplify/datastore": "^2.0.5",
@@ -21,6 +36,7 @@
     "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@types/googlemaps": "^3.39.3",
+    "@types/jest": "^25.2.1",
     "@zoomus/websdk": "^1.7.2",
     "Dante2": "^0.5.0-rc25",
     "aws-amplify": "^3.0.5",
@@ -68,7 +84,9 @@
     "@types/react-native": "^0.60.15",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.17.16",
+    "jest-expo": "^37.0.0",
     "module-to-cdn": "^3.1.5",
+    "react-test-renderer": "^16.13.1",
     "readline": "^1.3.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
