--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+      "node_modules/(?!(jest-)?react-native|@aws-sdk|aws-amplify-react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
     ],
+    "testEnvironment": "jsdom",
     "collectCoverage": true,
     "collectCoverageFrom": [
       "**/*.{ts,tsx}",
@@ -23,6 +24,14 @@
       "!**/node_modules/**",
       "!**/babel.config.js",
       "!**/jest.setup.js"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json",
+      "jsx",
+      "node"
     ]
   },
   "dependencies": {
@@ -35,8 +44,10 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "@testing-library/jest-dom": "^5.5.0",
     "@types/googlemaps": "^3.39.3",
     "@types/jest": "^25.2.1",
+    "@types/react-test-renderer": "^16.9.2",
     "@zoomus/websdk": "^1.7.2",
     "Dante2": "^0.5.0-rc25",
     "aws-amplify": "^3.0.5",
@@ -80,8 +91,11 @@
   "devDependencies": {
     "@aws-amplify/cli": "^4.18.0",
     "@expo/webpack-config": "^0.11.18",
+    "@sheerun/mutationobserver-shim": "^0.3.3",
+    "@testing-library/react": "^10.0.3",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.15",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.17.16",
     "jest-expo": "^37.0.0",
