Some updates for coverage and testing

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
       "!**/babel.config.js",
       "!**/jest.setup.js"
     ],
+    
+    "coverageDirectory":"coverage",
     "moduleFileExtensions": [
       "ts",
       "tsx",
